--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">20210825-JunaidAhmed-NYCSchools</string>
+    <string name="app_name">NYC School</string>
     <string name="error_occured_while_loading_data">Error Occured while loading data</string>
 </resources>
