--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">NYC School</string>
     <string name="error_occured_while_loading_data">Error Occured while loading data</string>
+    <string name="error_no_data">No SAT data avaialble for ths school</string>
 </resources>
